* added gap between admin actions * added `type=reset` to reset and suspend button * fixed table size on window resize

--- a/public/css/general/popup.css
+++ b/public/css/general/popup.css
@@ -5,18 +5,6 @@
     background: white;
 }
 
-/*
-.itemFirst {
-    float: left;
-    clear: left;
-    margin: 10px;
-}
-
-.item {
-    float: left;
-    margin: 10px;
-} */
-
 .popup {
     /* Change this colors */
     --label-color: #000;
