--- a/public/css/pages/accountManagement.css
+++ b/public/css/pages/accountManagement.css
@@ -5,4 +5,5 @@
 .admin-actions {
     display: flex;
     font-size: 22px;
+    gap: 1vw;
 }
